fixes margin on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,10 @@ button:disabled {
     }
   }
 
+  .photos-app {
+    margin-left: 40px;
+  }
+
   .photo-album {
     margin-left: 0 !important;
   }
